--- a/build.yaml
+++ b/build.yaml
@@ -18,8 +18,5 @@
 #     artifact-name: corne_left_with_studio
 #
 ---
-include:
-  - board: nice_nano
-    shield: sofle_left
-  - board: nice_nano
-    shield: sofle_right
+board: ["nice_nano_v2"]
+shield: ["k1_left", "k1_right"]
